--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -76,7 +76,9 @@
                             <th>Quantity</th>
                             <th>Price</th>
                             <th>Total</th>
+                            <%if(order.status == 'Cancelled' || order.status == 'Delivered'){%>
                             <th>Details</th>
+                            <%}%>
                             <% if (order.status !== 'Cancelled') { %>
                             <th>Action</th>
                             <% } %>
@@ -88,7 +90,9 @@
                             <td><%= order.quantity %></td>
                             <td>₹<%= order.product.salePrice %></td>
                             <td>₹<%= order.finalAmount.toFixed(2) %></td>
+                            <%if(order.status == 'Cancelled' || order.status == 'Delivered'){%>
                             <td><a href="/orders/<%= order._id %>" class="btn btn-primary btn-sm">View Details</a></td>
+                            <%}%>
                             <% if (order.status !== 'Cancelled' && order.status !== 'Delivered') { %>
                                 <td><a onclick="cancelOrder('<%= order._id %>')" class="btn btn-danger btn-sm">Cancel</a></td>
                             <% } else if (order.status === 'Delivered') { %>
